cleaned up code and files for java