@@ -1,13 +1,12 @@
 package org.weaveit.seatingplacesuggestions;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class SuggestionMade {
 
     private final List<SeatingPlace> suggestedSeats;
-    private int partyRequested;
-    private PricingCategory pricingCategory;
+    private final int partyRequested;
+    private final PricingCategory pricingCategory;
 
     public SuggestionMade(SeatingOptionSuggested seatingOptionSuggested) {
         this.suggestedSeats = seatingOptionSuggested.seats();
@@ -16,10 +15,10 @@ public class SuggestionMade {
     }
 
     public List<String> seatNames() {
-        return suggestedSeats.stream().map(SeatingPlace::toString).collect(Collectors.toList());
+        return suggestedSeats.stream().map(SeatingPlace::toString).toList();
     }
 
-    public boolean MatchExpectation() {
+    public boolean matchExpectation() {
         return suggestedSeats.size() == partyRequested;
     }
 
